# smarc_controllers

./: README.md  release_packages.yaml  smarc_controllers.rosinstall
sam_basic_controllers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sam_basic_controllers/include/sam_basic_controllers/: pid_manager.h
sam_basic_controllers/launch/: dynamic_alt_ctrl .launch  dynamic_alt_ctrl.launch  dynamic_controllers.launch  dynamic_depth_ctrl.launch  dynamic_heading_ctrl.launch  dynamic_heading_ctrl_SAM.launch  dynamic_roll_ctrl.launch  dynamic_velocity_ctrl.launch  odom_listener.launch  pid_manager.launch  sam_control.launch  sam_controllers_tcg.launch  sam_gazebo_control.launch  sam_subsystem_control.launch  simulink_model_control.launch  static_alt_ctrl .launch  static_alt_ctrl.launch  static_controllers.launch  static_depth_ctrl .launch  static_depth_ctrl.launch  static_depth_ctrl_SAM.launch  static_pitch_ctrl.launch  static_roll_ctrl.launch  tf_listener.launch  thrust_vector_ctrl.launch  thrusters_ctrl.launch  velocity_ctrl.launch
sam_basic_controllers/launch/REAL/: dynamic_alt_ctrl_REAL.launch  dynamic_controllers_REAL.launch  dynamic_controllers_REAL_OLD.launch  dynamic_controllers_SIM.launch  dynamic_depth_ctrl_REAL.launch  dynamic_heading_ctrl_REAL.launch  dynamic_roll_ctrl_REAL.launch  dynamic_velocity_ctrl_REAL.launch  static_alt_ctrl_REAL.launch  static_controllers_REAL.launch  (+2 more)
sam_basic_controllers/sam_basic_controllers/: depth_lookahead_node.py  thruster_ctrl_node.py
sam_basic_controllers/scripts/: depth_lookahead_node.py  thruster_ctrl_node.py
(+27 files in other folders)
